--- a/client/src/assets/css/fullpage.css
+++ b/client/src/assets/css/fullpage.css
@@ -160,9 +160,6 @@
 .custom-description h2 {
 	font-size: 1.1rem;
 	margin-bottom: 0.5rem;
-	opacity: 0;
-	transform: translateY(10px);
-	animation: fadeSlideIn 0.5s ease-out forwards;
 }
 @keyframes fadeSlideIn {
 	to {
@@ -183,6 +180,10 @@
 	margin-bottom: 1rem;
 	transition: all 0.3s ease;
 	filter: grayscale(50%);
+	font-size: 1rem;
+	opacity: 0;
+	transform: translateY(100%);
+	animation: fadeSlideIn 0.5s ease-out forwards;
 }
 
 /* 모바일 대응 */
