--- a/client/src/assets/css/fullpage.css
+++ b/client/src/assets/css/fullpage.css
@@ -161,12 +161,6 @@
 	font-size: 1.1rem;
 	margin-bottom: 0.5rem;
 }
-@keyframes fadeSlideIn {
-	to {
-		opacity: 1;
-		transform: translateY(0);
-	}
-}
 
 .custom-description p {
 	font-size: 0.7rem;
@@ -176,14 +170,18 @@
 
 .custom-description img {
 	width: 100%;
-	border-radius: 6px;
+	border-radius: 8px;
 	margin-bottom: 1rem;
-	transition: all 0.3s ease;
-	filter: grayscale(50%);
-	font-size: 1rem;
 	opacity: 0;
-	transform: translateY(100%);
-	animation: fadeSlideIn 0.5s ease-out forwards;
+	transform: translateY(20px) scale(0.98);
+	animation: fadeImageIn 0.6s ease-out forwards;
+}
+
+@keyframes fadeImageIn {
+	to {
+		opacity: 1;
+		transform: translateY(0) scale(1);
+	}
 }
 
 /* 모바일 대응 */
