이미지 경로 수정

--- a/client/src/assets/css/fullpage.css
+++ b/client/src/assets/css/fullpage.css
@@ -232,7 +232,7 @@
 	position: relative;
 	width: 100%;
 	padding-top: 56.25%; /* 16:9 비율 */
-	background-image: url('/assets/img/map.svg');
+	background-image: url('../img/map.svg');
 	background-size: cover;
 	background-position: center;
 }
