--- a/client/src/assets/css/fullpage.css
+++ b/client/src/assets/css/fullpage.css
@@ -229,12 +229,6 @@
 	overflow: hidden;
 }
 
-.map-image {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-}
-
 .map-marker {
 	position: absolute;
 	cursor: pointer;
@@ -246,6 +240,11 @@
 	color: #e74c3c;
 	font-size: 2rem;
 	animation: pulse 2s infinite;
+	transition: transform 0.3s ease;
+}
+
+.map-marker i.active {
+	transform: scale(1.3);
 }
 
 .marker-popup {
@@ -254,20 +253,17 @@
 	left: 50%;
 	transform: translate(-50%, -110%);
 	width: 240px;
+	height: 300px;
 	background: white;
 	color: #333;
 	padding: 1rem;
 	border-radius: 12px;
 	box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
-	display: none;
+	display: flex;
 	flex-direction: column;
 	align-items: center;
 	animation: fadeSlideIn 0.5s ease forwards;
-	height: 300px;
-}
-
-.map-marker:hover .marker-popup {
-	display: flex;
+	font-size: 0.75rem;
 }
 
 .marker-popup img {
@@ -276,6 +272,16 @@
 	object-fit: cover;
 	border-radius: 8px;
 	margin-bottom: 0.5rem;
+}
+
+.marker-popup h5 {
+	font-size: 1rem;
+	margin-bottom: 0.3rem;
+}
+
+.marker-popup p {
+	font-size: 0.8rem;
+	text-align: center;
 }
 
 .marker-wave {
@@ -312,14 +318,4 @@
 		opacity: 1;
 		transform: translate(-50%, -110%) scale(1);
 	}
-}
-
-.marker-popup h5 {
-	font-size: 1rem;
-}
-.marker-popup {
-	font-size: 0.75rem;
-}
-.marker-popup p {
-	font-size: 0.8rem;
 }
