--- a/client/src/assets/css/fullpage.css
+++ b/client/src/assets/css/fullpage.css
@@ -393,6 +393,22 @@
 	left: 100%;
 	top: 70%;
 }
+.active-marker--3 {
+	left: 70%;
+	top: 55%;
+}
+.map-popup--3 {
+	left: 100%;
+	top: 70%;
+}
+.active-marker--3 {
+	left: 70%;
+	top: 55%;
+}
+.map-popup--3 {
+	left: 100%;
+	top: 70%;
+}
 .circle-marker.hidden {
 	display: none;
 }
