--- a/client/src/assets/css/fullpage.css
+++ b/client/src/assets/css/fullpage.css
@@ -7,7 +7,7 @@
 	align-items: center;
 	height: 100vh;
 	overflow: hidden;
-	font-family: 'Lato';
+	font-family: 'PartialSansKR';
 }
 .one {
 	background: #1bb1a5;
