--- a/client/src/assets/css/font.css
+++ b/client/src/assets/css/font.css
@@ -61,3 +61,80 @@
 	font-weight: 400;
 	font-style: normal;
 }
+
+@font-face {
+	font-family: 'Century Cothic';
+	src: url('../font/GOTHIC.ttf') format('truetype');
+	font-weight: 400;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Century Cothic';
+	src: url('../font/GOTHICB.ttf') format('truetype');
+	font-weight: 600;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Outfit';
+	src: url('../font/Outfit-Thin.ttf') format('truetype');
+	font-weight: 100;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Outfit';
+	src: url('../font/Outfit-ExtraLight.ttf') format('truetype');
+	font-weight: 200;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Outfit';
+	src: url('../font/Outfit-Light.ttf') format('truetype');
+	font-weight: 300;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Outfit';
+	src: url('../font/Outfit-Regular.ttf') format('truetype');
+	font-weight: 400;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Outfit';
+	src: url('../font/Outfit-Medium.ttf') format('truetype');
+	font-weight: 500;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Outfit';
+	src: url('../font/Outfit-SemiBold.ttf') format('truetype');
+	font-weight: 600;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Outfit';
+	src: url('../font/Outfit-Bold.ttf') format('truetype');
+	font-weight: 700;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Outfit';
+	src: url('../font/Outfit-ExtraBold.ttf') format('truetype');
+	font-weight: 800;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Outfit';
+	src: url('../font/Outfit-Black.ttf') format('truetype');
+	font-weight: 900;
+	font-style: normal;
+}
