풀페이지 수정 폰트 추가

--- a/client/src/assets/css/font.css
+++ b/client/src/assets/css/font.css
@@ -138,3 +138,10 @@
 	font-weight: 900;
 	font-style: normal;
 }
+
+@font-face {
+	font-family: 'Righteous-Regular';
+	src: url('../font/Righteous-Regular.ttf') format('truetype');
+	font-weight: 900;
+	font-style: normal;
+}
