--- a/client/src/assets/css/fullpage.css
+++ b/client/src/assets/css/fullpage.css
@@ -7,11 +7,11 @@
 	align-items: center;
 	height: 100vh;
 	overflow: hidden;
-	font-family: 'PartialSansKR';
 }
 
 .section H1 {
-	font-family: 'Outfit';
+	font-family: 'Righteous-Regular';
+
 }
 
 .one {
