텍스트 길이에 맞추기

--- a/client/src/assets/css/welcome.css
+++ b/client/src/assets/css/welcome.css
@@ -51,7 +51,7 @@ body {
 }
 
 .moon__txt {
-    font-family: "MonumentExtended-Ultrabold", sans-serif;
+    font-family: 'MonumentExtended';
     font-size: 103px;
     line-height: 1;
     fill: black;
