세로 간격 수정

--- a/client/src/assets/css/welcome.css
+++ b/client/src/assets/css/welcome.css
@@ -30,6 +30,10 @@ body {
     visibility: hidden;
 }
 
+.container video {
+    object-fit: cover;
+}
+
 .container__base {
     position: absolute;
     z-index: 0;
