--- a/client/src/assets/css/reset.css
+++ b/client/src/assets/css/reset.css
@@ -94,6 +94,10 @@ video {
 	vertical-align: baseline;
 }
 
+div {
+	box-sizing: border-box;
+}
+
 /* HTML5 display-role reset for older browsers */
 article,
 aside,
