슬라이드 높이 채우기

--- a/client/src/assets/css/introduction.css
+++ b/client/src/assets/css/introduction.css
@@ -8,6 +8,7 @@
     box-sizing: border-box;
     overflow-y: auto;
     font-family: 'Pretendard', sans-serif;
+    width: 100%
 }
 
 /* === 슬라이드별 배경 색상 구분 === */
