--- a/client/src/assets/css/welcome.css
+++ b/client/src/assets/css/welcome.css
@@ -26,7 +26,7 @@ body {
     max-height: 740px;
     min-width: 1800px;
     min-height: 740px;
-    background: #333;
+    background: #fff;
     cursor: pointer;
     visibility: hidden;
 }
@@ -40,7 +40,7 @@ body {
     z-index: 0;
     width: 100%;
     height: 100%;
-    background: #333;
+    background: #fff;
 }
 
 /* 📏 .moon 높이도 viewBox에 맞게 740px로 변경 */
