--- a/client/src/assets/css/Header.css
+++ b/client/src/assets/css/Header.css
@@ -1,4 +1,3 @@
-/* 기본 헤더 레이아웃 */
 .site-header {
 	background-color: #fff;
 	padding: 16px;
@@ -142,8 +141,7 @@
 }
 
 /* 다크모드 대응 */
-@media (prefers-color-scheme: dark) {
-}
+@media (prefers-color-scheme: dark) {}
 
 input[type='search']::-webkit-search-cancel-button {
 	display: none;
