--- a/client/src/assets/css/welcome.css
+++ b/client/src/assets/css/welcome.css
@@ -9,7 +9,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #333;
+    background-color: #fff;
     color: white;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
